# wilt-clicker

./: .gitignore  README.md  WiltClicker.spec  pyproject.toml  version.txt
src/: main.py
src/engine/: clicker.py  hotkeys.py  win32.py
src/ui/: app.py
