[project]
name = "extreme-clicker"
version = "0.1.0"
description = "A high-performance Windows autoclicker built with Python"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=6.0.0",
    "keyboard>=0.13.5",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W191"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = false

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
